# hiot-fechadura

./: flows.json
software/src/: index.html  main.js  styles.css
software/src-tauri/: Cargo.toml  Info.ios.plist  tauri.conf.json
software/src-tauri/icons/: icon.icns
software/src-tauri/src/: lib.rs  main.rs
