[package]
name = "controle_fechadura"
version = "0.1.0"
description = "Um aplicativo para modificar o acesso a uma fechadura inteligente"
authors = ["edrf"]
edition = "2024"

[lib]
name = "controle_fechadura_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-nfc = { git = "https://github.com/RoBoa-Robotics/plugins-workspace", rev = "e34306e083351c51b1953c69dead931678b4a8a6", package = "tauri-plugin-nfc" }
